# JobFilter

./: .gitignore  .pre-commit-config.yaml  IDEAS.md  README.md  pyproject.toml
src/: search.py
src/jobfilter/: search.py
src/jobfilter/scrapers/: company_scraper.py
src/jobfilter/scripts/: scripts.py
src/scrapers/: company_scraper.py
