[project]
name = "jobfilter"
version = "0.1.0"
description = "Search job offers with advanced filter"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-jobspy (>=1.1.80,<2.0.0)",
    "haystack-ai (>=2.13.2,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "transformers[torch] (>=4.51.3,<5.0.0)",
    "linkedin-scraper (>=2.11.5,<3.0.0)",
    "ollama-haystack (>=3.0.0,<4.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
